added swagger to my backend for docs
