# swagger-output.json
@@ -65,6 +65,35 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "john"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "example@email.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "colorHere"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "2024-02-03"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -101,6 +130,37 @@
         "description": "",
         "produces": [
           "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "john"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "example@email.com"
+                },
+                "favoriteColor": {
+                  "type": "string",
+                  "example": "colorHere"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "2024-02-03"
+                }
+              }
+            }
+          }
         ],
         "responses": {
           "204": {
